haskell on laptop

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,3 +40,8 @@ set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name
 #       %h %d %Y - date in the [Mon DD YYYY] format
 #       %l:%M %p - time in the [HH:MM AM/PM] format
 # set -g status-right '#[fg=green][#[fg=white]#(echo $USER) @ #H#[fg=green]][#[fg=black,bold]%h %d %Y #[bg=green,fg=white,bold]%l:%M %p#[default]#[fg=green]]'
+
+# keep tmux sessions alive after reboot
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
