adding vim-hardtime and using semshi to rename

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,12 @@
 set-option -g default-shell /bin/zsh
-# set -g default-terminal screen-256color
+set -g default-terminal "tmux-256color"
 # set -g default-terminal xterm
 # set-option -ga terminal-overrides ",*256col*:Tc" # 这句是关键
 
 set-option -sg escape-time 10
-set-option -ga terminal-override ',xterm*:Tc'
+# set -g prefix M-space
+# set-option -ga terminal-override ',xterm*:Tc'
+# set -as terminal-overrides ",gnome*:RGB"
 
 bind h select-pane -L       # 切换到左边的 Pane
 bind j select-pane -D       # 切换到下边的 Pane
