--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 set-option -g default-shell /bin/zsh
 set -g default-terminal "tmux-256color"
+
 # set -g default-terminal xterm
 # set-option -ga terminal-overrides ",*256col*:Tc" # 这句是关键
 
@@ -47,3 +48,6 @@ set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
+# auto chose im in vim
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g focus-events on
