add markdown extensions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,3 +51,5 @@ set -g @continuum-restore 'on'
 # auto chose im in vim
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g focus-events on
+#  disable status line
+set -g status off
