add clangd, pomodoro and change colorshceme

--- a/task.ini
+++ b/task.ini
@@ -1,3 +1,9 @@
+[file-build]
+command:cpp=g++ -O2 -Wconversion "$(VIM_FILEPATH)" -o "$(VIM_FILEDIR)/$(VIM_FILENOEXT)"
+output=terminal
+cwd=$(VIM_FILEDIR)
+save=2
+
 [file-run]
 command="$(VIM_FILEPATH)"
 command:c,cpp="$(VIM_PATHNOEXT)"
