--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,6 +1,5 @@
 {"suggest.triggerAfterInsertEnter": true,
-    "python.jediEnabled": false,
-    "python.jediMemoryLimit":-1,
+    "python.jediEnabled": true,
     "suggest.minTriggerInputLength": 2,
     "diagnostic.displayByAle": true,
     "suggest.floatEnable": true,
@@ -24,73 +23,6 @@
             "initializationOptions": {
                 "languageServerHaskell": {
                     "hlintOn": true
-                }
-            },
-        },
-        "python": {
-            "command": "python",
-            "args": [
-                "-mpyls",
-                "-vv",
-                "--log-file",
-                "/tmp/lsp_python.log"
-            ],
-            "trace.server": "verbose",
-            "filetypes": [
-                "python"
-            ],
-            "settings": {
-                "pyls": {
-                    "enable": true,
-                    "trace": {
-                        "server": "verbose"
-                    },
-                    "commandPath": "",
-                    "configurationSources": [
-                        "pycodestyle"
-                    ],
-                    "plugins": {
-                        "jedi_completion": {
-                            "enabled": true
-                        },
-                        "jedi_hover": {
-                            "enabled": true
-                        },
-                        "jedi_references": {
-                            "enabled": true
-                        },
-                        "jedi_signature_help": {
-                            "enabled": true
-                        },
-                        "jedi_symbols": {
-                            "enabled": true,
-                            "all_scopes": true
-                        },
-                        "mccabe": {
-                            "enabled": true,
-                            "threshold": 15
-                        },
-                        "preload": {
-                            "enabled": true
-                        },
-                        "pycodestyle": {
-                            "enabled": true
-                        },
-                        "pydocstyle": {
-                            "enabled": false,
-                            "match": "(?!test_).*\\.py",
-                            "matchDir": "[^\\.].*"
-                        },
-                        "pyflakes": {
-                            "enabled": false
-                        },
-                        "rope_completion": {
-                            "enabled": false
-                        },
-                        "yapf": {
-                            "enabled": false
-                        }
-                    }
                 }
             }
         }
