--- a/task.ini
+++ b/task.ini
@@ -14,7 +14,7 @@ command:sh=sh "$(VIM_FILENAME)"
 command:lua=lua "$(VIM_FILENAME)"
 command:perl=perl "$(VIM_FILENAME)"
 command:ruby=ruby "$(VIM_FILENAME)"
-command:haskell=ghc --make %< && ./%<
+command:haskell=ghc $(VIM_FILENAME) && ./$(VIM_FILENOEXT)
 output=terminal
 cwd=$(VIM_FILEDIR)
 save=2
