--- a/task.ini
+++ b/task.ini
@@ -14,7 +14,9 @@ command:sh=sh "$(VIM_FILENAME)"
 command:lua=lua "$(VIM_FILENAME)"
 command:perl=perl "$(VIM_FILENAME)"
 command:ruby=ruby "$(VIM_FILENAME)"
+command:tex=xelatex "$(VIM_FILENAME)"
 command:haskell=ghc $(VIM_FILENAME) && ./$(VIM_FILENOEXT)
+command:R=Rscript "$(VIM_FILENAME)"
 output=terminal
 cwd=$(VIM_FILEDIR)
 save=2
