--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,13 +1,9 @@
 set-option -g default-shell /bin/zsh
+# set -g default-terminal "xterm-256color"
+set -ga terminal-overrides ",*256col*:Tc"
 set -g default-terminal "tmux-256color"
 
-# set -g default-terminal xterm
-# set-option -ga terminal-overrides ",*256col*:Tc" # 这句是关键
-
-set-option -sg escape-time 10
-# set -g prefix M-space
-# set-option -ga terminal-override ',xterm*:Tc'
-# set -as terminal-overrides ",gnome*:RGB"
+# set-option -sg escape-time 10
 
 bind h select-pane -L       # 切换到左边的 Pane
 bind j select-pane -D       # 切换到下边的 Pane
@@ -18,32 +14,33 @@ bind R resize-pane -R 10    # 向右扩展
 bind K resize-pane -U 5     # 向上扩展
 bind J resize-pane -D 5     # 向下扩展
 
-bind Escape copy-mode
-bind-key -Tcopy-mode-vi 'v' send -X begin-selection
-bind-key -Tcopy-mode-vi 'y' send -X copy-selection
-unbind p
-bind p pasteb
-setw -g mode-keys vi      # Vi风格选择文本
-# integration of vim and tmux
-set -g @plugin 'christoomey/vim-tmux-navigator'
-run '~/.tmux/plugins/tpm/tpm'
+# bind Escape copy-mode
+# bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+# bind-key -Tcopy-mode-vi 'y' send -X copy-selection
+# unbind p
+# bind p pasteb
+# setw -g mode-keys vi      # Vi风格选择文本
+
+# tmux-fzf
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @tmux-fzf-launch-key 'f'
+TMUX_FZF_OPTIONS="-d 35%"
+TMUX_FZF_POPUP_HEIGHT="38%"
+TMUX_FZF_POPUP_WIDTH="62%"
+TMUX_FZF_PANE_FORMAT="[#{window_name}] #{pane_current_command}  [#{pane_width}x#{pane_height}] [history #{history_size}/#{history_limit}, #{history_bytes} bytes] #{?pane_active,[active],[inactive]}"
+# TMUX_FZF_POPUP=0
 
 
-# put useful info in the status bar
-set-option -g set-titles on
-set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name, active(or not)
-
-# highlight the current window in the status bar (blue background)
-#       #I - window index
-#       #W - window title
-#       #F - window flag
-
-# Right side of status bar
-#       $(echo $USER) - shows the current username
-#       #H - shows the hostname of your computer
-#       %h %d %Y - date in the [Mon DD YYYY] format
-#       %l:%M %p - time in the [HH:MM AM/PM] format
-# set -g status-right '#[fg=green][#[fg=white]#(echo $USER) @ #H#[fg=green]][#[fg=black,bold]%h %d %Y #[bg=green,fg=white,bold]%l:%M %p#[default]#[fg=green]]'
+set -g status-position top               # statusbar position
+set -g status-interval 1
+set -g window-status-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})'
+set -g window-status-current-format '[#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})]'
+set -g status-right-length 120
+set -g status-right '#(pomodoro status | colrm 3) | #(whoami)@#(hostname -s) '
+# set -g status-right '#(pomodoro status | colrm 3) | #(whoami)@#(hostname -s) %H:%M %Y-%m-%d'
 
 # keep tmux sessions alive after reboot
 set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -53,4 +50,21 @@ set -g @continuum-restore 'on'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g focus-events on
 #  disable status line
-set -g status off
+set -g status on
+
+# loud or quiet?
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence off
+setw -g monitor-activity off
+set -g bell-action none
+
+# statusbar
+set -g status-justify left
+set -g status-right-length 50
+set -g status-left-length 20
+
+# setw -g window-status-current-style 'bold'
+setw -g window-status-bell-style 'bold'
+
+run '~/.tmux/plugins/tpm/tpm'
