--- a/coc-settings.json
+++ b/coc-settings.json
@@ -26,6 +26,7 @@
         "typeParameter": "\uf728",
         "default": "\uf29c"
     },
+    "suggest.labelMaxLength":50,
     "suggest.disableMenuShortcut":true,
     "suggest.minTriggerInputLength": 2,
     "diagnostic.displayByAle": true,
@@ -33,13 +34,18 @@
     "diagnostic.messageTarget": "float",
     "signature.target": "float",
     "coc.preferences.hoverTarget": "float",
-    "python.jediEnabled":false,
+    "diagnostic.virtualText": true,
+    "codeLens.enable": true,
     "languageserver": {
         "haskell": {
-            "command": "hie-wrapper",
-            "args": ["--lsp"],
+            "command": "ghcide",
+            "args": [
+                "--lsp"
+            ],
             "rootPatterns": [
-                "stack.yaml",
+                ".stack.yaml",
+                ".hie-bios",
+                "BUILD.bazel",
                 "cabal.config",
                 "package.yaml"
             ],
@@ -47,14 +53,29 @@
                 "hs",
                 "lhs",
                 "haskell"
-            ],
-            "initializationOptions": {
-                "languageServerHaskell": {
-                    "hlintOn": true
-                }
+            ]
+        },
+        "pylance": {
+            "enable": true,
+            "filetypes": ["python"],
+            "command": "node",
+            "args": ["/home/zen/.vscode/extensions/ms-python.vscode-pylance-2020.9.4/dist/server.bundle.js", "--stdio"],
+            "initializationOptions": {},
+            "settings": {
+                "python.analysis.typeCheckingMode": "basic",
+                "python.analysis.diagnosticMode": "openFilesOnly",
+                "python.analysis.stubPath": "./typings",
+                "python.analysis.autoSearchPaths": true,
+                "python.analysis.extraPaths": [],
+                "python.analysis.diagnosticSeverityOverrides": {},
+                "python.analysis.useLibraryCodeForTypes": true
             }
-
+        },
+        "sql": {
+            "command": "sql-language-server",
+            "args" : ["up", "--method", "stdio"],
+            "filetypes": ["sql", "mysql"]
         }
-
-    }
+    },
+    "rust-client.channel": "stable"
 }
