--- a/task.ini
+++ b/task.ini
@@ -15,7 +15,10 @@ command:lua=lua "$(VIM_FILENAME)"
 command:perl=perl "$(VIM_FILENAME)"
 command:ruby=ruby "$(VIM_FILENAME)"
 command:tex=xelatex "$(VIM_FILENAME)"
-command:haskell=ghc $(VIM_FILENAME) && ./$(VIM_FILENOEXT)
+command:haskell=ghc -haddock $(VIM_FILENAME) && ./$(VIM_FILENOEXT)
+; command:rust=rustc $(VIM_FILENAME) && ./$(VIM_FILENOEXT)
+command:rust=cargo run $(VIM_FILENAME)
+; command:R=R "$(VIM_FILENAME)"
 command:R=Rscript "$(VIM_FILENAME)"
 output=terminal
 cwd=$(VIM_FILEDIR)
