plugin for consist switch shortcuts between vim and tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,4 +67,7 @@ set -g status-left-length 20
 # setw -g window-status-current-style 'bold'
 setw -g window-status-bell-style 'bold'
 
+# move between vim and tmux
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
 run '~/.tmux/plugins/tpm/tpm'
