--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 set-option -g default-shell /bin/zsh
-# set -g default-terminal "xterm-256color"
-set -ga terminal-overrides ",*256col*:Tc"
-set -g default-terminal "tmux-256color"
+# set -ga terminal-overrides ",*256col*:Tc"
+# set -g default-terminal "tmux-256color"
+set-option -sa terminal-overrides ",xterm*:Tc"
 
 # set-option -sg escape-time 10
 
