return to manjaro

--- a/.i3blocks.conf
+++ b/.i3blocks.conf
@@ -4,11 +4,10 @@ color=#ffffff
 separator_block_width=20
 markup=pango
 
-[weather]
-command=curl -Ss 'https://en.wttr.in/guangzhou?0&T&Q' | cut -c 16- | head -2 | xargs echo
-# command=curl -Ss 'https://wttr.in?0&T&Q' | cut -c 16- | head -2 | xargs echo
-interval=3600
-# color=#A4C2F4
+# [weather]
+# command=curl -Ss 'https://en.wttr.in/guangzhou?0&T&Q' | cut -c 16- | head -2 | xargs echo
+# interval=3600
+# # color=#A4C2F4
 
 # [home]
 # command=df -h /home | awk 'FNR==2{print $4}'
@@ -18,12 +17,12 @@ interval=3600
 [cpu_usage]
 command=~/.config/i3blocks/cpu_usage/cpu_usage
 interval=1
-label=<span color="#8be9fd"> </span>
+label=<span color="#8be9fd"> C</span>
 
 [memory]
-command=free -h --si | awk 'FNR==2{ print $0 }' | awk '{ print $7 }'
-interval=2
-label=<span color="#a9e185"> </span>
+command=free -h --si | awk 'FNR==2{ print $0 }' | awk '{ print $7}'
+interval=1
+label=<span color="#a9e185"> M</span>
 
 # [volume]
 # command=pulseaudio-ctl full-status | awk '{ printf "%i%\n", $1 }'
@@ -31,6 +30,6 @@ label=<span color="#a9e185"> </span>
 # label=<span color="#ff79c6"> </span>
 
 [time]
-command=date '+%m-%d %I:%M '
+command=date '+%m-%d %a %I:%M '
 interval=1
-label=<span color="#ffb86c">&#xf073; </span>
+label=<span color="#ffb86c"> </span>
